[package]
name = "inaccu6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"

[features]
default = []
# Add routines to set the CPU registers, something no real 6502 system would
# be able to do.
override-registers = []
# Incorrect overflow flag behavior, required to pass Klaus Dormann's functional
# tests.
dormann-overflow-bug = []