[package]
name = "inaccunes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
inaccu6502 = {path = "../inaccu6502"}
sdl2 = {version = "0.35.2", features = ["bundled", "unsafe_textures"]}
png = "0.17.9"
anyhow = "1.0.71"
